better alignment, correct font sizes

--- a/resources/local.css
+++ b/resources/local.css
@@ -19,7 +19,7 @@
 
 #bigbuttons {
 	position: absolute;
-	right: 330px;
+	right: 320px;
 	top: 15px;
 }
 
